test/error/2/Solution.java
public class Solution {

  // Errors because tests expect two string inputs
  public String main(String a, int b) {
    return a.toLowerCase() + " " + Integer.toString(b);
  }

}
